# Sysopy2019

./: .gitignore  README.md
zestaw1/zad1/: CMakeLists.txt  library.c  library.h
zestaw1/zad2/: CMakeLists.txt  main.c
zestaw1/zad3a/: CMakeLists.txt  main_dynamic.c
zestaw1/zad3b/: CMakeLists.txt  main_dynamic.c
zestaw2/: README.md
zestaw2/zad1/: CMakeLists.txt  generate_tests.sh  main.c
zestaw2/zad2/: CMakeLists.txt  main.c
zestaw3/: README.md
zestaw3/zad1/: CMakeLists.txt  main.c
zestaw3/zad2/: CMakeLists.txt  main.c
zestaw3/zad3/: CMakeLists.txt  main.c  tester.c
zestaw4/zad1/: CMakeLists.txt  README.md  main.c  main2.c  shell.sh
zestaw4/zad2/: CMakeLists.txt  lista.txt  main.c
zestaw4/zad3a/: catcher  catcher.c  sender  sender.c
zestaw4/zad3b/: CMakeLists.txt  catcher  catcher.c  sender  sender.c
